@@ -1,0 +1,24 @@
+# "unstable-b-01.prsimrc"
+# @haco@ unstable-b.haco-a
+
+timing after
+unstable warn
+unstable-dequeue
+
+set b 0
+cycle
+assert c X
+assertn-queue
+set a 0
+cycle
+assert c 1
+
+set a 1
+advance 2
+queue
+echo should be c- in queue
+time
+
+set a X
+advance 2
+
